[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dubois-style"
version = "0.1.0"
description = "A W.E.B. Du Bois–inspired Matplotlib style and color palette."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = ["matplotlib", "visualization", "data-viz", "du-bois", "style"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "marimo>=0.17.7",
    "matplotlib>=3.7",
    "python-lsp-server>=1.13.1",
]

[project.optional-dependencies]
docs = [
    "marimo>=0.8.0",
    "mkdocs>=1.6",
    "mkdocs-material",
]

[project.urls]
Homepage = "https://github.com/yourname/dubois-style"
Documentation = "https://github.com/yourname/dubois-style"
Repository = "https://github.com/yourname/dubois-style"
Issues = "https://github.com/yourname/dubois-style/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dubois_style = ["py.typed"]


